[gd_scene load_steps=9 format=3 uid="uid://v57cfg0brij1"]

[ext_resource type="Script" uid="uid://bfnpbesmeqbfv" path="res://player.gd" id="1_y0qk3"]
[ext_resource type="Texture2D" uid="uid://chxu3t572ajsp" path="res://Art/player.png" id="2_3y5cq"]
[ext_resource type="Texture2D" uid="uid://bki46yucql7od" path="res://Art/flightbarunder.png" id="3_0ad8t"]
[ext_resource type="Script" uid="uid://nu1k5evfacry" path="res://Objects/player_ui.gd" id="3_x20fu"]
[ext_resource type="Texture2D" uid="uid://c7edw1kgpwnjg" path="res://Art/flightbarprog.png" id="4_x20fu"]
[ext_resource type="Texture2D" uid="uid://diqxysr8qrq5b" path="res://Art/healthbarprog.png" id="5_0ar0x"]
[ext_resource type="Texture2D" uid="uid://dfl5v181d46ft" path="res://Art/staff.png" id="7_slvmq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2i4gt"]
size = Vector2(12, 13)

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_y0qk3")
metadata/_custom_type_script = "uid://pfrh7u2ltx2"

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_3y5cq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_2i4gt")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="player_ui_layer" type="CanvasLayer" parent="."]

[node name="ui" type="Control" parent="player_ui_layer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_x20fu")

[node name="VBoxContainer" type="VBoxContainer" parent="player_ui_layer/ui"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.01
anchor_top = 0.02
anchor_right = 0.084
anchor_bottom = 0.077
offset_right = 64.0
offset_bottom = 40.0

[node name="HealthBar" type="TextureProgressBar" parent="player_ui_layer/ui/VBoxContainer"]
layout_mode = 2
value = 100.0
texture_under = ExtResource("3_0ad8t")
texture_progress = ExtResource("5_0ar0x")

[node name="FlightBar" type="TextureProgressBar" parent="player_ui_layer/ui/VBoxContainer"]
layout_mode = 2
max_value = 1.5
step = 0.05
value = 1.5
texture_under = ExtResource("3_0ad8t")
texture_progress = ExtResource("4_x20fu")

[node name="wand" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("7_slvmq")
offset = Vector2(16, 0)

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
